Funcional parcialmente avanzado

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <button onclick="crearNota()">Agregar Nota</button>
 
     <script>
-        var socket = io.connect('http://localhost:5000');
+        var socket = io.connect('http://127.0.0.1:5000');
 
         socket.on('connect', function() {
             socket.emit('obtener_notas', {'usuario': 'usuario_prueba'});
